tests/miniJava/neg/000045_mutation.MiniJava
class java { class java { } public static void Main ( String [ ] java ) { { } } }
